--- a/Alanoca.Jonathan.PPLabII/Properties/Resources.resx
+++ b/Alanoca.Jonathan.PPLabII/Properties/Resources.resx
@@ -124,4 +124,7 @@
   <data name="man" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\man.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="man1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\man.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
